--- a/src/components/todo-header/template.html
+++ b/src/components/todo-header/template.html
@@ -1,6 +1,5 @@
 <header class="{{ styles.header }}">
     <h1>Todos</h1>
-    <input class="edit {{ styles.newTodo }}" placeholder="What needs to be done?" ng-model="newTodo" ng-keyup="handleKeyUp($event)">
-    <!--<input class="new-todo" placeholder="What needs to be done?" [(ngModel)]="newTodo" autofocus="" (keyup.enter)="addTodo()">-->
+    <input class="edit {{ styles.newTodo }}" placeholder="What needs to be done?" ng-model="newTodo" autofocus="" ng-keyup="handleKeyUp($event)">
 </header>
 
