--- a/src/components/todo-list/template.html
+++ b/src/components/todo-list/template.html
@@ -3,7 +3,7 @@
     <section class="main" ng-if="getTodos().length">
         <!--<input class="toggle-all" type="checkbox" #toggleall [checked]="allCompleted()" (click)="setAllTo(toggleall)">-->
         <ul class="todo-list" ng-repeat="todo in getTodos()">
-            <todo-item model="todo"></todo-item>
+            <todo-item todo="todo"></todo-item>
             <!--<todo-item *ngFor="let todo of getTodos()" [todo]="todo" (itemRemoved)="remove($event)" (itemModified)="update($event)"></todo-item>-->
         </ul>
     </section>
