Adding eslint, adding todo-store. Can check complete and delete todos

--- a/src/components/todo-item/template.html
+++ b/src/components/todo-item/template.html
@@ -1,4 +1,10 @@
-<li>{{ todo.title }}</li>
+<li ng-class="{ completed: todo.completed, editing: editing }">
+  <div class="view">
+    <input class="toggle" type="checkbox" ng-click="toggleCompletion()" ng-checked="todo.completed">
+    <label ng-dblclick="edit(todo)">{{ todo.title | trim }}</label>
+    <button class="destroy" ng-click="remove()"></button>
+  </div>
+</li>
 <!--
 <li [class.completed]="todo.completed" [class.editing]="editing">
     <div class="view">
