Trying to get title editing to work

--- a/src/components/todo-header/template.html
+++ b/src/components/todo-header/template.html
@@ -1,5 +1,10 @@
 <header class="{{ styles.header }}">
   <h1>Todos</h1>
-  <input class="edit {{ styles.newTodo }}" placeholder="What needs to be done?" ng-model="newTodo" autofocus="" ng-keyup="handleKeyUp($event)">
+  <input
+    class="edit {{ styles.newTodo }}"
+    placeholder="What needs to be done?"
+    ng-model="newTodo"
+    autofocus=""
+    ng-keyup="handleKeyUp($event)">
 </header>
 
