Editing a todo works. Adding in footer, problems with replacing todoStore.todos array and binding to it

--- a/src/components/todo-list/template.html
+++ b/src/components/todo-list/template.html
@@ -12,6 +12,9 @@
     </ul>
   </section>
 
-  <todo-footer></todo-footer>
+  <todo-footer
+    on-remove-completed="store.removeCompleted"
+    remaining-count="store.getRemaining().length"
+    total-count="getTodos().length"></todo-footer>
 </section>
 
