--- a/src/components/todo-item/template.html
+++ b/src/components/todo-item/template.html
@@ -5,15 +5,5 @@
     <button class="destroy" ng-click="remove()"></button>
   </div>
 
-  <input class="edit" ng-if="editing" ng-model="editedTitle" ng-keyup="handleKeyUp($event)">
+  <input class="edit" ng-show="editing" ng-model="editedTitle" ng-blur="stopEditing()" ng-keyup="handleKeyUp($event)">
 </li>
-<!--
-<li [class.completed]="todo.completed" [class.editing]="editing">
-    <div class="view">
-        <input class="toggle" type="checkbox" (click)="toggleCompletion()" [checked]="todo.completed">
-        <label (dblclick)="edit(todo)">{{ todo.title | trim }}</label>
-        <button class="destroy" (click)="remove()"></button>
-    </div>
-    <input class="edit" *ngIf="editing" [value]="todo.title" #editedtodo (blur)="stopEditing(editedtodo)" (keyup.enter)="stopEditing(editedtodo)" (keyup.escape)="cancelEditing()">
-</li>
--->
