--- a/src/components/todo-footer/template.html
+++ b/src/components/todo-footer/template.html
@@ -1,21 +1,15 @@
 <footer class="footer" ng-if="totalCount > 0">
     <span class="todo-count"><strong>{{ remainingCount }}</strong> {{ remainingCount == 1 ? 'item' : 'items' }} left</span>
-    <button class="clear-completed" ng-if="totalCount > remainingCount" ng-click="onRemoveCompleted()">Clear completed</button>
-</footer>
-<!--
-<footer class="footer" *ngIf="getCount()">
-    <span class="todo-count"><strong>{{ getRemainingCount() }}</strong> {{ getRemainingCount() == 1 ? 'item' : 'items' }} left</span>
     <ul class="filters">
         <li>
-            <a [routerLink]="['']" [class.selected]="currentStatus == ''">All</a>
+            <a ng-click="onChangeFilter('')" ng-class="{ selected: filter == '' }">All</a>
         </li>
         <li>
-            <a [routerLink]="['', 'active']" [class.selected]="currentStatus == 'active'">Active</a>
+            <a ng-click="onChangeFilter('active')" ng-class="{ selected: filter == 'active' }">Active</a>
         </li>
         <li>
-            <a [routerLink]="['', 'completed']" [class.selected]="currentStatus == 'completed'">Completed</a>
+            <a ng-click="onChangeFilter('completed')" ng-class="{ selected: filter == 'completed' }">Completed</a>
         </li>
     </ul>
-    <button class="clear-completed" *ngIf="hasCompleted()" (click)="removeCompleted()">Clear completed</button>
+    <button class="clear-completed" ng-if="totalCount > remainingCount" ng-click="onRemoveCompleted()">Clear completed</button>
 </footer>
--->
