Working on css modules. todo-item ng-class isn't working

--- a/src/components/todo-footer/template.html
+++ b/src/components/todo-footer/template.html
@@ -1,15 +1,15 @@
-<footer class="footer" ng-if="totalCount > 0">
-    <span class="todo-count"><strong>{{ remainingCount }}</strong> {{ remainingCount == 1 ? 'item' : 'items' }} left</span>
-    <ul class="filters">
+<footer class="{{ styles.footer }}" ng-if="totalCount > 0">
+    <span class="{{ styles.todoCount }}"><strong>{{ remainingCount }}</strong> {{ remainingCount == 1 ? 'item' : 'items' }} left</span>
+    <ul class="{{ styles.filters }}">
         <li>
-            <a ng-click="onChangeFilter('')" ng-class="{ selected: filter == '' }">All</a>
+            <a ng-click="onChangeFilter('')" ng-class="{ '{{ styles.selected }}': filter == '' }">All</a>
         </li>
         <li>
-            <a ng-click="onChangeFilter('active')" ng-class="{ selected: filter == 'active' }">Active</a>
+            <a ng-click="onChangeFilter('active')" ng-class="{ '{{ styles.selected }}': filter == 'active' }">Active</a>
         </li>
         <li>
-            <a ng-click="onChangeFilter('completed')" ng-class="{ selected: filter == 'completed' }">Completed</a>
+            <a ng-click="onChangeFilter('completed')" ng-class="{ '{{ styles.selected }}': filter == 'completed' }">Completed</a>
         </li>
     </ul>
-    <button class="clear-completed" ng-if="totalCount > remainingCount" ng-click="onRemoveCompleted()">Clear completed</button>
+    <button class="{{ styles.clearCompleted }}" ng-if="totalCount > remainingCount" ng-click="onRemoveCompleted()">Clear completed</button>
 </footer>
