--- a/src/components/todo-app/template.html
+++ b/src/components/todo-app/template.html
@@ -1,5 +1,5 @@
 <todo-list></todo-list>
-<footer class="{{ styles.info }}">
+<footer class="{{ $ctrl.styles.info }}">
   <p>Double-click to edit a todo</p>
   <p>Written by <a href="http://phdesign.com.au">Paul Heasley</a></p>
   <p>Code modified from <a href="https://github.com/tastejs/todomvc/tree/master/examples/angular2_es2015">todomvc/angular2_es2015</a></p>
